# hTensor

./: .gitignore  LICENSE  README.md  hTensor.cabal  stack.yaml
src/: Lib.hs
